parameterisation of client_id and formatting

--- a/install.txt
+++ b/install.txt
@@ -2,7 +2,7 @@
 -----------------------------------------------------------------------
 
 * install .egg file
-* install database definitions
 * create users in the database
+  python -m loauth --add-user username --password password
 
 
